# short-news

./: .gitignore  APPLY_DIGEST_FIX.md  CATEGORY_AND_COMPANY_FILTER_UPDATE.md  COMPETITOR_NEWS_SETUP.md  COMPLETE_FIX_SUMMARY.md  CURRENT_ISSUES_AND_FIXES.md  DASHBOARD_DIGESTS_FIXED.md  DEVELOPMENT.md  DIGEST_DATE_LOGIC.md  DIGEST_FIX_FINAL.md  DIGEST_SETTINGS_CHECK_REPORT.md  DIGEST_SETTINGS_DEBUG_REPORT.md  DIGEST_SETTINGS_FIX.md  DIGEST_SETTINGS_FIXED_REPORT.md  DIGEST_UI_FIX.md  DIGEST_UPDATE_SUMMARY.md  ENUM_FIX_FINAL.md  ERROR_ANALYSIS_REPORT.md  FILTER_FIX_REPORT.md  FINAL_COMPLETE_FIX.md  FINAL_REPORT.md  FINAL_SUMMARY.md  FIXES_APPLIED.md  FIX_NOTIFICATIONS_ERROR.md  IMPLEMENTATION_REPORT.md  MIGRATION_SUCCESS_REPORT.md  NAVIGATION_FIX_SUMMARY.md  NEWS_PAGE_SEPARATION_IMPLEMENTATION.md  NEWS_SCRAPER_CONTAINER.md  NEWS_SCRAPING_REPORT.md  NEWS_SOURCES_UPDATE.md  NEW_FEATURES_SUMMARY.md  PLAYWRIGHT_TEST_REPORT.md  PROJECT_STATUS.md  QUICK_FIX.md  QUICK_FIX_500_ERROR.md  QUICK_START_DIGEST_FEATURES.md  QUICK_START_NEW_FEATURES.md  README.md  REAL_DATA_IMPLEMENTATION.md  (+23 more)
backend/: DIGEST_BUTTONS_FIX_REPORT.md  Dockerfile  Dockerfile.bot  Dockerfile.scraper  REFACTORING_REPORT.md  TELEGRAM_BOT_DOCKER_README.md  TELEGRAM_BOT_REFACTORING_REPORT.md  alembic.ini  celery_app.py  celerybeat-schedule  competitors.csv  env.example  fix_user_preferences.py  get_chat_id.py  main.py  pyproject.toml  requirements.txt  send_digest.py  setup_telegram_bot_interactive.py  test_api_endpoint.py  test_api_endpoints.py  test_callback_simple.py  test_db_connection.py  test_digest_buttons.py  test_digest_generation.py  test_digest_settings.py  test_digest_settings_api.py  test_digest_settings_login.py  test_digest_settings_with_auth.py  test_digest_sync.py  test_endpoint.py  test_fastapi_endpoint.py  test_frontend_digest_settings.py  test_telegram_bot.py  test_telegram_callbacks.py  test_webhook_callbacks.py
backend/alembic/: env.py
backend/alembic/versions/: 28c9c8f54d42_add_enum_types.py  b5037d3c878c_add_new_news_categories.py  c1d2e3f4g5h6_add_digest_and_notifications.py  d5e6f7g8h9i0_add_timezone_to_preferences.py  e1f2g3h4i5j6_fix_enum_type_names.py
backend/app/: __init__.py
backend/app/api/: dependencies.py
backend/app/bot/: __init__.py  handlers.py
backend/database/: init.sql
backend/scripts/: README.md  SCRAPER_CONTAINER_README.md  analyze_news.py  check_database.py  check_news_count.py  create_demo_user.py  docker_bot_management.ps1  docker_bot_management.sh  fix_news_categories.py  import_competitors_from_csv.py  import_from_docker.py  init_all_settings.py  init_notification_settings.py  init_user_preferences.py  populate_news.py  run_full_import.py  run_telegram_bot.py  scrape_all_companies.py  scraper-cron  scraper-entrypoint.sh  setup_telegram_bot.py  simple_fix_categories.py  telegram_polling.py  test_news_api.py  test_telegram_bot.py
docs/: QUICK_START.md  (+3 more)
(+81 files in other folders)
